--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
+Project Name: JavaJam Coffee House (HW5)
+Author: Melinda Tran
+Date Last Modified: March 24, 2019
 <html lang="en">
 <head>
-	<h1>JavaJam Coffee House</h1>
-	<nav>
-		<b><a href="index.html">Home</a> &nbsp;
-		<a href="menu.html">Menu</a> &nbsp;
-		<a href="music.html">Music</a> &nbsp;
-		<a href="jobs.html">Jobs</a> &nbsp;</b>
-	</nav>
 	<title>JavaJam Coffee House</title>
 	<meta charset="utf-8">
 </head>
-	<h2>Relax at JavaJam</h2>
-Project Name: JavaJam Coffee House (HW5)<br />
-Author: Melinda Tran<br />
-Date Last Modified: March 24, 2019<br />
 <body>
+		<h1>JavaJam Coffee House</h1><br />
+	<nav>
+		<b><a href="index.html">Home</a> |
+		<a href="menu.html">Menu</a> |
+		<a href="music.html">Music</a> |
+		<a href="jobs.html">Jobs</a></b>
+	</nav><br />
+		<h2>Relax at JavaJam</h2><Br />
 Specialty Coffee and Tea<br/>
 Bagels, Muffins, and Gluten-free Pastries<br />
 Organic Salads<br />
