--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Missing comment area!!!
+body area closed too early.
+lists not setup correctly!
+-->
 Project Name: JavaJam Coffee House (HW5)
 Author: Melinda Tran
 Date Last Modified: March 24, 2019
