--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <!--
-Missing comment area!!!
-body area closed too early.
-lists not setup correctly!
--->
 Project Name: JavaJam Coffee House (HW5)
 Author: Melinda Tran
-Date Last Modified: March 24, 2019
+Date Last Modified: April 8, 2019
+-->
 <html lang="en">
 <head>
 	<title>JavaJam Coffee House</title>
@@ -20,15 +17,18 @@ Date Last Modified: March 24, 2019
 		<a href="music.html">Music</a> |
 		<a href="jobs.html">Jobs</a></b>
 	</nav><br />
-		<h2>Relax at JavaJam</h2><Br />
-Specialty Coffee and Tea<br/>
-Bagels, Muffins, and Gluten-free Pastries<br />
-Organic Salads<br />
-Music and Poetry Readings<br />
-Open Mic Night<br /><br /></body>
+		<h2>Relax at JavaJam</h2>
+	<ul>
+		<li>Specialty Coffee and Tea</li>
+		<li>Bagels, Muffins, and Gluten-free Pastries</li>
+		<li>Organic Salads</li>
+		<li>Music and Poetry Readings</li>
+		<li>Open Mic Night</li>
+	</ul>	
 <div>12010 Garrett Bay Road<br />
 Ellison Bay, WI 54210<br />
-888-555-5555<br /><br /><br /></div>
+888-555-5555</div>
+</body>
 <footer><small><i>Copyright © 2018 JavaJam Coffee House<br />
 melinda@tran.com</i></small></footer>
 </html>
