--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+<!--
 Project Name: JavaJam Coffee House (HW5)
 Author: Melinda Tran
-Date Last Modified: March 24, 2019
+Date Last Modified: April 8, 2019
+-->
 <html lang="en">
 <head>
 	<title>JavaJam Coffee House Menu</title>
@@ -16,19 +18,20 @@ Date Last Modified: March 24, 2019
 		<a href="jobs.html">Jobs</a></b>
 	</nav><br />
 		<h2>Coffee at JavaJam</h2><br />
-<dt><strong>Just Java</strong></dt>
-Regular house blend, decaffeinated coffee, or flavor of the day.<br />
-Endless Cup $3.00
-<dt><strong>Cafe au Lait</strong></dt>
-House blended coffee infused into a smooth, steamed milk.<br />
-Single $2.00 Double $4.00
-<dt><strong>Iced Cappuccino</strong></dt>
-Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br />
-Single $4.75 Double $6.00
-<br /><br /></body>
+	<dl>
+		<dt><strong>Just Java</strong></dt>
+			<dd>Regular house blend, decaffinated coffee, or flavor of the day.<br/>
+				Endless Cup $3.00</dd>
+		<dt><strong>Cafe au Lait</strong></dt>
+			<dd>house blended coffee infused into a smooth, steamed milk.<br/>
+				Single $2.00 Double $4.00</dd>
+		<dt><strong>Iced Cappuccino</strong></dt>
+			<dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br/>
+				Single $4.75 Double $6.00</dd>
+	</dl>
 <div>12010 Garrett Bay Road<br />
 Ellison Bay, WI 54210<br />
-888-555-5555<br /><br /><br /></div>
+888-555-5555</div></body>
 <footer><small><i>Copyright © 2018 JavaJam Coffee House<br />
 melinda@tran.com</i></small></footer>
 </html>
