hw05 melinda tran

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@ Date Last Modified: April 8, 2019
 <div>12010 Garrett Bay Road<br />
 Ellison Bay, WI 54210<br />
 888-555-5555</div>
-</body>
 <footer><small><i>Copyright © 2018 JavaJam Coffee House<br />
-melinda@tran.com</i></small></footer>
+melinda@tran.com</i></small></footer></body>
 </html>
