--- a/menu.html
+++ b/menu.html
@@ -31,7 +31,7 @@ Date Last Modified: April 8, 2019
 	</dl>
 <div>12010 Garrett Bay Road<br />
 Ellison Bay, WI 54210<br />
-888-555-5555</div></body>
+888-555-5555</div>
 <footer><small><i>Copyright © 2018 JavaJam Coffee House<br />
-melinda@tran.com</i></small></footer>
+melinda@tran.com</i></small></footer></body>
 </html>
